# Starsurge

./: .gitignore  CMakeLists.txt  ast.dot  imgui.ini  swizzle.txt
cmake/: FindGLFW3.cmake
include/: AABB.h  AssetManager.h  BSTree.h  Callback.h  Camera.h  Circle.h  Color.h  Component.h  Cone.h  Cylinder.h  Engine.h  Entity.h  EulerAngles.h  Framebuffer.h  Game.h  GameSettings.h  Graph.h  Input.h  Intersects.h  Light.h  Line.h  Line2D.h  LinkedList.h  Logging.h  Material.h  Matrix.h  Mesh.h  MeshRenderer.h  Numerics.h  OBB.h  Plane.h  Polygon.h  Quad.h  Quaternion.h  RNG.h  Ray.h  Rect.h  Scene.h  Shader.h  Sphere.h  (+7 more)
include/ShaderCompiler/: AST.h  Compiler.h  Lexemes.h  Lexer.h  Parser.h
include/glad/: glad.h
include/imgui/: imgui_internal.h
src/: AABB.cpp  AssetManager.cpp  BasicLighting.cpp  BasicShader.cpp  CMakeLists.txt  Camera.cpp  Circle.cpp  Color.cpp  Component.cpp  Cone.cpp  Cube.cpp  Cylinder.cpp  Engine.cpp  Entity.cpp  EulerAngles.cpp  Framebuffer.cpp  Game.cpp  GameSettings.cpp  Input.cpp  Intersects.cpp  Light.cpp  Line.cpp  Line2D.cpp  Logging.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  Numerics.cpp  OBB.cpp  Phong.cpp  Plane.cpp  Quad.cpp  Quaternion.cpp  RNG.cpp  Ray.cpp  Rect.cpp  Scene.cpp  Shader.cpp  Sphere.cpp  Texture.cpp  (+6 more)
src/ShaderCompiler/: AST.cpp  Compiler.cpp  Lexer.cpp  Parser.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
tests/basic/: CMakeLists.txt  main.cpp
tools/editor/: CMakeLists.txt  Grid.cpp  Grid.h  main.cpp
